--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -8,6 +8,13 @@ version: '3.7'
 x-auth-variables: &auth-variables
   # authentication method: encrypted HTTP basic authentication ('true') vs LDAP ('false')
   NGINX_BASIC_AUTH : 'true'
+  # NGINX LDAP (NGINX_BASIC_AUTH=false) can support LDAP, LDAPS, or LDAP+StartTLS.
+  #   For StartTLS, set NGINX_LDAP_TLS_STUNNEL=true to issue the StartTLS command
+  #   and use stunnel to tunnel the connection.
+  NGINX_LDAP_TLS_STUNNEL : 'false'
+  # When NGINX_LDAP_TLS_STUNNEL=true, which protocol to use when initiating the
+  # "extendedReq(1) LDAP_START_TLS_OID" command: winldap or openldap
+  NGINX_LDAP_TLS_STUNNEL_PROTOCOL : 'winldap'
 
 x-moloch-variables: &moloch-variables
   MANAGE_PCAP_FILES : 'false'
