--- a/nginx/supervisord.conf
+++ b/nginx/supervisord.conf
@@ -16,19 +16,33 @@ supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock
 
-[program:php]
-command=php-fpm7.3 -F -R -g /var/run/php-fpm.pid
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-autostart=%(ENV_NGINX_BASIC_AUTH)s
-
 [program:nginx]
-command=/bin/bash -c "sleep 10 && nginx -g \"daemon off;\""
-startsecs=15
+command=/usr/sbin/nginx
+startsecs=10
+startretries=2000000000
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-autostart=%(ENV_NGINX_BASIC_AUTH)s
+
+[program:dockergen]
+command=/usr/local/bin/docker-gen -watch -notify "nginx -s reload" /etc/nginx/nginx.tmpl /etc/nginx/conf.d/default.conf
+startsecs=5
+startretries=2000000000
+stopasgroup=true
+killasgroup=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:stunnel]
+command=/usr/bin/stunnel /etc/stunnel/stunnel.conf
+startsecs=10
+startretries=2000000000
+stopasgroup=true
+killasgroup=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+autostart=%(ENV_NGINX_LDAP_TLS_STUNNEL)s
