--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # moloch
 /moloch/etc/GeoLite2-*
-/moloch/etc/oui.txt
-/moloch/etc/ipv4-address-space.csv
+/moloch/etc/oui.txt*
+/moloch/etc/ipv4-address-space.csv*
 /README.css
 
 # auth-related
@@ -10,6 +10,7 @@
 /filebeat/certs
 /nginx/certs
 /nginx/htpasswd
+/nginx/nginx_ldap.conf
 /htadmin/config.ini
 /htadmin/metadata
 /elastalert/config/smtp-auth.yaml
