--- a/docker-compose-standalone-zeek-live.yml
+++ b/docker-compose-standalone-zeek-live.yml
@@ -5,6 +5,17 @@ version: '3.7'
 ################################################################################
 # Commonly tweaked configuration options
 #-------------------------------------------------------------------------------
+x-auth-variables: &auth-variables
+  # authentication method: encrypted HTTP basic authentication ('true') vs LDAP ('false')
+  NGINX_BASIC_AUTH : 'true'
+  # NGINX LDAP (NGINX_BASIC_AUTH=false) can support LDAP, LDAPS, or LDAP+StartTLS.
+  #   For StartTLS, set NGINX_LDAP_TLS_STUNNEL=true to issue the StartTLS command
+  #   and use stunnel to tunnel the connection.
+  NGINX_LDAP_TLS_STUNNEL : 'false'
+  # When NGINX_LDAP_TLS_STUNNEL=true, which protocol to use when initiating the
+  # "extendedReq(1) LDAP_START_TLS_OID" command: winldap or openldap
+  NGINX_LDAP_TLS_STUNNEL_PROTOCOL : 'winldap'
+
 x-moloch-variables: &moloch-variables
   MANAGE_PCAP_FILES : 'false'
   MOLOCH_ANALYZE_PCAP_THREADS : 1
@@ -77,7 +88,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.4
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.5
     restart: "no"
     hostname: elasticsearch
     environment:
@@ -106,7 +117,7 @@ services:
       - ./elasticsearch:/usr/share/elasticsearch/data:delegated
       - ./elasticsearch-backup:/opt/elasticsearch/backup:delegated
   kibana:
-    image: malcolmnetsec/kibana-oss:1.7.2
+    image: malcolmnetsec/kibana-oss:1.8.0
     restart: "no"
     hostname: kibana
     environment:
@@ -129,7 +140,7 @@ services:
         retries: 3
         start_period: 200s
   elastalert:
-    image: malcolmnetsec/elastalert:1.7.2
+    image: malcolmnetsec/elastalert:1.8.0
     restart: "no"
     hostname: elastalert
     environment:
@@ -154,7 +165,7 @@ services:
       - ./elastalert/config/config.json:/opt/elastalert-server/config/config.json
       - ./elastalert/rules/:/opt/elastalert/rules/
   curator:
-    image: malcolmnetsec/curator:1.7.2
+    image: malcolmnetsec/curator:1.8.0
     restart: "no"
     hostname: curator
     environment:
@@ -164,7 +175,7 @@ services:
     depends_on:
       - elasticsearch
   logstash:
-    image: malcolmnetsec/logstash-oss:1.7.2
+    image: malcolmnetsec/logstash-oss:1.8.0
     restart: "no"
     hostname: logstash
     environment:
@@ -192,7 +203,7 @@ services:
       - ./cidr-map.txt:/usr/share/logstash/config/cidr-map.txt:ro
       - ./host-map.txt:/usr/share/logstash/config/host-map.txt:ro
   filebeat:
-    image: malcolmnetsec/filebeat-oss:1.7.2
+    image: malcolmnetsec/filebeat-oss:1.8.0
     restart: "no"
     hostname: filebeat
     environment:
@@ -217,7 +228,7 @@ services:
       - ./filebeat/certs/client.crt:/certs/client.crt:ro
       - ./filebeat/certs/client.key:/certs/client.key:ro
   moloch:
-    image: malcolmnetsec/moloch:1.7.2
+    image: malcolmnetsec/moloch:1.8.0
     restart: "no"
     hostname: moloch
     env_file:
@@ -246,7 +257,7 @@ services:
       - ./moloch-logs:/data/moloch/logs
       - ./moloch-raw:/data/moloch/raw
   zeek:
-    image: malcolmnetsec/zeek:1.7.2
+    image: malcolmnetsec/zeek:1.8.0
     restart: "no"
     hostname: zeek
     environment:
@@ -263,7 +274,7 @@ services:
       - ./zeek-logs/upload:/zeek/upload
       - ./zeek-logs/extract_files:/zeek/extract_files
   file-monitor:
-    image: malcolmnetsec/file-monitor:1.7.2
+    image: malcolmnetsec/file-monitor:1.8.0
     restart: "no"
     hostname: filemon
     environment:
@@ -274,7 +285,7 @@ services:
       - ./zeek-logs/extract_files:/data/zeek/extract_files
       - ./zeek-logs/current:/data/zeek/logs
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:1.7.2
+    image: malcolmnetsec/pcap-capture:1.8.0
     restart: "no"
     network_mode: host
     ulimits:
@@ -291,7 +302,7 @@ services:
     volumes:
       - ./pcap/upload:/pcap
   pcap-monitor:
-    image: malcolmnetsec/pcap-monitor:1.7.2
+    image: malcolmnetsec/pcap-monitor:1.8.0
     restart: "no"
     hostname: pcapmon
     environment:
@@ -305,7 +316,7 @@ services:
       - ./zeek-logs:/zeek
       - ./pcap:/pcap
   upload:
-    image: malcolmnetsec/file-upload:1.7.2
+    image: malcolmnetsec/file-upload:1.8.0
     restart: "no"
     hostname: upload
     env_file:
@@ -322,10 +333,11 @@ services:
     volumes:
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
   htadmin:
-    image: malcolmnetsec/htadmin:1.7.2
+    image: malcolmnetsec/htadmin:1.8.0
     restart: "no"
     hostname: htadmin
     environment:
+      << : *auth-variables
       VIRTUAL_HOST : 'htadmin.malcolm.local'
     expose:
       - 80
@@ -334,9 +346,11 @@ services:
       - ./htadmin/metadata:/var/www/htadmin/config/metadata:rw
       - ./nginx/htpasswd:/var/www/htadmin/config/htpasswd:rw
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:1.7.2
+    image: malcolmnetsec/nginx-proxy:1.8.0
     restart: "no"
     hostname: nginx-proxy
+    environment:
+      << : *auth-variables
     depends_on:
       - moloch
       - kibana
@@ -353,5 +367,8 @@ services:
       - "28991:28991"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./nginx/nginx_ldap.conf:/etc/nginx/nginx_ldap.conf:ro
       - ./nginx/htpasswd:/etc/nginx/.htpasswd:ro
       - ./nginx/certs:/etc/nginx/certs:ro
+      - ./nginx/certs/dhparam.pem:/etc/nginx/dhparam/dhparam.pem:ro
+
