--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -18,7 +18,8 @@ serverurl=unix:///var/run/supervisor.sock
 
 [program:watcher]
 command=/usr/local/bin/zeek_carve_watcher.py
-  --verbose %(ENV_EXTRACTED_FILE_VERBOSE)s
+  --verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG)s
+  --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
   --start-sleep %(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
   --ignore-existing %(ENV_EXTRACTED_FILE_IGNORE_EXISTING)s
   --min-bytes %(ENV_EXTRACTED_FILE_MIN_BYTES)s
@@ -37,7 +38,8 @@ redirect_stderr=true
 
 [program:scanner]
 command=/usr/local/bin/zeek_carve_scanner.py
-  --verbose %(ENV_EXTRACTED_FILE_VERBOSE)s
+  --verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG)s
+  --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
   --start-sleep %(ENV_EXTRACTED_FILE_SCANNER_START_SLEEP)s
   --vtot-api %(ENV_VTOT_API2_KEY)s
   --vtot-req-limit %(ENV_VTOT_REQUESTS_PER_MINUTE)s
@@ -59,7 +61,8 @@ redirect_stderr=true
 
 [program:logger]
 command=/usr/local/bin/zeek_carve_logger.py
-  --verbose %(ENV_EXTRACTED_FILE_VERBOSE)s
+  --verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG)s
+  --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
   --start-sleep %(ENV_EXTRACTED_FILE_LOGGER_START_SLEEP)s
   --preserve %(ENV_EXTRACTED_FILE_PRESERVATION)s
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
