--- a/sensor-iso/config/includes.chroot/etc/security/limits.d/limits.conf
+++ b/sensor-iso/config/includes.chroot/etc/security/limits.d/limits.conf
@@ -1,5 +1,5 @@
-* soft nofile 65535
-* hard nofile 65535
+* soft nofile 2097152
+* hard nofile 2097152
 * soft memlock unlimited
 * hard memlock unlimited
 * soft core 0
