--- a/sensor-iso/interface/sensor_ctl/auditbeat/auditbeat.yml
+++ b/sensor-iso/interface/sensor_ctl/auditbeat/auditbeat.yml
@@ -33,6 +33,8 @@ auditbeat.modules:
                       auditd.summary.how: '/opt/zeek/bin/zeek'
                   - equals:
                       auditd.summary.how: '/usr/sbin/netsniff-ng'
+                  - equals:
+                      auditd.summary.how: '/opt/moloch/bin/moloch-capture'
           - and:
               - equals:
                   event.type: 'syscall'
@@ -60,6 +62,8 @@ auditbeat.modules:
                             auditd.summary.how: '/opt/zeek/bin/zeek'
                         - equals:
                             auditd.summary.how: '/usr/sbin/netsniff-ng'
+                        - equals:
+                            auditd.summary.how: '/opt/moloch/bin/moloch-capture'
                 - and:
                     - or:
                         - equals:
@@ -89,13 +93,6 @@ auditbeat.modules:
                         auditd.summary.how: 'python3.7'
                 - and:
                     - equals:
-                        auditd.data.syscall: 'open'
-                    - regexp:
-                        auditd.summary.object.primary: '^/usr/lib/python2.7/'
-                    - equals:
-                        auditd.summary.how: 'supervisorctl'
-                - and:
-                    - equals:
                         auditd.summary.how: '/bin/bash'
                     - equals:
                         auditd.summary.actor.primary: 'sensor'
@@ -103,6 +100,35 @@ auditbeat.modules:
                         auditd.data.syscall: 'chown'
                     - equals:
                         auditd.summary.object.primary: '/home/sensor/.bash_history'
+                - and:
+                    - or:
+                        - equals:
+                            auditd.data.syscall: 'open'
+                        - equals:
+                            auditd.data.syscall: 'openat'
+                        - equals:
+                            auditd.data.syscall: 'unlink'
+                        - equals:
+                            auditd.data.syscall: 'rename'
+                        - equals:
+                            auditd.data.syscall: 'renameat'
+                    - regexp:
+                        auditd.summary.object.primary: '^/(capture/|usr/lib/python)'
+                    - or:
+                        - equals:
+                            auditd.summary.how: 'zeekctl'
+                        - equals:
+                            auditd.summary.how: 'supervisorctl'
+                - and:
+                    - regexp:
+                        auditd.summary.object.primary: '^/dev/shm/\.org\.chromium'
+                    - equals:
+                        auditd.summary.how: '/usr/lib/chromium/chromium'
+                - and:
+                    - equals:
+                        auditd.summary.object.primary: '/opt/sensor/sensor_ctl/filebeat/data/registry.new'
+                    - equals:
+                        auditd.summary.how: '/usr/share/filebeat/bin/filebeat'
 
 
 - module: file_integrity
@@ -251,3 +277,4 @@ setup.kibana:
 
 #================================ Logging ======================================
 logging.metrics.enabled: false
+
