--- a/kibana/kibana-standard.yml
+++ b/kibana/kibana-standard.yml
@@ -5,7 +5,7 @@ server.name: kibana
 server.host: "0"
 server.basePath: "/kibana"
 server.rewriteBasePath: true
-elasticsearch.url: ${ELASTICSEARCH_URL}
+elasticsearch.hosts: ["${ELASTICSEARCH_URL}"]
 elasticsearch.requestTimeout: 180000
 kibana.defaultAppId: "dashboard/${KIBANA_DEFAULT_DASHBOARD}"
 elastalert-kibana-plugin.serverHost: elastalert
