--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -13,7 +13,7 @@
 
 filter {
 
-  if (([message] =~ /^\s*#/) or (![source])) {
+  if (([message] =~ /^\s*#/) or (![log][file][path])) {
     drop { id => "drop_zeek_invalid_logs" }
   }
 
@@ -22,7 +22,7 @@ filter {
     id => "ruby_zeek_source_extract"
                                                                   #↓Type     ↓Tags
     code => "
-      if fileParts = event.get('[source]').split('/').last.match(/^(.*?)(?:\((.*)\))?\.log/i) then
+      if fileParts = event.get('[log][file][path]').split('/').last.match(/^(.*?)(?:\((.*)\))?\.log/i) then
         logType, tags = fileParts.captures
         event.set('[source]', logType) unless logType.nil?
         event.set('[@metadata][zeek_log_tags]', tags) unless tags.nil?
