--- a/sensor-iso/interface/sensor_ctl/auditbeat/auditbeat.yml
+++ b/sensor-iso/interface/sensor_ctl/auditbeat/auditbeat.yml
@@ -37,7 +37,7 @@ auditbeat.modules:
                       auditd.summary.how: '/opt/moloch/bin/moloch-capture'
           - and:
               - equals:
-                  event.type: 'syscall'
+                  auditd.message_type: 'syscall'
               - equals:
                   auditd.summary.object.type: 'file'
               - or:
