--- a/docker-compose-standalone-zeek-live.yml
+++ b/docker-compose-standalone-zeek-live.yml
@@ -94,8 +94,9 @@ services:
     restart: "no"
     hostname: elasticsearch
     environment:
+      logger.level : 'WARN'
       bootstrap.memory_lock : 'true'
-      ES_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Des.logger.level=INFO -Djava.security.egd=file:/dev/./urandom'
+      ES_JAVA_OPTS : '-Xms4g -Xmx4g -Xss256k -Djava.security.egd=file:/dev/./urandom'
       VIRTUAL_HOST : 'es.malcolm.local'
       discovery.type : 'single-node'
       # cluster.initial_master_nodes : 'elasticsearch'
