more work dealing with changes to beats for 7.x

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -323,7 +323,7 @@ filter {
     id => "mutate_remove_field_beats_useless"
     remove_field => [
       "[beat]",
-      "[offset]",
+      "[log][offset]",
       "[prospector]",
       "[message]"
     ]
