--- a/sensor-iso/interface/sensor_ctl/filebeat/filebeat.yml
+++ b/sensor-iso/interface/sensor_ctl/filebeat/filebeat.yml
@@ -1,6 +1,8 @@
+# Copyright (c) 2019 Battelle Energy Alliance, LLC.  All rights reserved.
+
 logging.metrics.enabled: false
 
-filebeat.prospectors:
+filebeat.inputs:
 - type: log
   paths:
     - ${BEAT_LOG_PATTERN:/home/sensor/bro_logs/*.log}
