--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2457,9 +2457,9 @@ filter {
              add_field => { "[zeekLogDocId]" => "%{[zeek][uid]}" } }
 
   } else {
-    if ([offset]) {
+    if ([log][offset]) {
       mutate { id => "mutate_add_field_zeek_not_conn_offset_zeekLogDocId"
-               add_field => { "[zeekLogDocId]" => "%{[zeek][uid]}-%{source}-%{offset}" } }
+               add_field => { "[zeekLogDocId]" => "%{[zeek][uid]}-%{source}-%{[log][offset]}" } }
     } else {
       uuid {
         id => "uuid_zeek_random_not_conn"
