--- a/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-upload.desktop
+++ b/malcolm-iso/config/includes.chroot/usr/share/applications/malcolm-upload.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - Upload
-Exec=/usr/bin/chromium https://localhost:8443/
+Exec=/usr/bin/chromium https://localhost/upload/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
