--- a/sensor-iso/moloch/Dockerfile
+++ b/sensor-iso/moloch/Dockerfile
@@ -18,5 +18,6 @@ RUN sed -i "s/buster main/buster main contrib non-free/g" /etc/apt/sources.list 
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 ADD build-moloch-deb.sh /usr/local/bin/
+ADD etc /moloch-etc
 
 ENTRYPOINT ["/bin/bash", "/usr/local/bin/build-moloch-deb.sh"]
