work on issue #102, log access to Malcolm web interface(s) to Elasticsearch for analysis in Kibana

--- a/filebeat/supervisord.conf
+++ b/filebeat/supervisord.conf
@@ -28,6 +28,24 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
+[program:filebeat-nginx]
+command=bash -c "/data/elastic_search_status.sh && /usr/local/bin/docker-entrypoint -e --strict.perms=false \
+  --path.home /usr/share/filebeat-nginx \
+  --path.config /usr/share/filebeat-nginx \
+  --path.data /usr/share/filebeat-nginx/data \
+  -c /usr/share/filebeat-nginx/filebeat-nginx.yml \
+  --modules nginx"
+user=filebeat
+autostart=%(ENV_NGINX_LOG_ACCESS_AND_ERRORS)s
+startsecs=30
+startretries=2000000000
+stopasgroup=true
+killasgroup=true
+directory=/usr/share/filebeat-nginx
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
 [program:watch-upload]
 command=/bin/bash -c "sleep 30 && /data/filebeat-watch-zeeklogs-uploads-folder.sh"
 startsecs=35
