--- a/docker-compose-standalone-zeek-live.yml
+++ b/docker-compose-standalone-zeek-live.yml
@@ -16,6 +16,10 @@ x-auth-variables: &auth-variables
   # "extendedReq(1) LDAP_START_TLS_OID" command: winldap or openldap
   NGINX_LDAP_TLS_STUNNEL_PROTOCOL : 'winldap'
 
+x-nginx-variables: &nginx-variables
+  # Whether or not to write nginx's access.log and error.log to Elasticsearch
+  NGINX_LOG_ACCESS_AND_ERRORS : 'false'
+
 x-moloch-variables: &moloch-variables
   MANAGE_PCAP_FILES : 'false'
   MOLOCH_ANALYZE_PCAP_THREADS : 1
@@ -212,9 +216,11 @@ services:
     restart: "no"
     hostname: filebeat
     environment:
+      << : *nginx-variables
       << : *common-upload-variables
       << : *common-beats-variables
       FILEBEAT_LOG_PATH : '/data/zeek/current'
+      FILEBEAT_NGINX_LOG_PATH : '/data/nginx'
       FILEBEAT_LOG_CLEANUP_MINUTES : 180
       FILEBEAT_ZIP_CLEANUP_MINUTES : 360
       FILEBEAT_SCAN_FREQUENCY : '10s'
@@ -228,6 +234,7 @@ services:
     depends_on:
       - logstash
     volumes:
+      - nginx-log-path:/data/nginx:ro
       - ./zeek-logs:/data/zeek
       - ./filebeat/certs/ca.crt:/certs/ca.crt:ro
       - ./filebeat/certs/client.crt:/certs/client.crt:ro
@@ -363,6 +370,7 @@ services:
     hostname: nginx-proxy
     environment:
       << : *auth-variables
+      << : *nginx-variables
     depends_on:
       - moloch
       - kibana
@@ -378,9 +386,13 @@ services:
       - "9600:9600"
       - "28991:28991"
     volumes:
+      - nginx-log-path:/var/log/nginx:rw
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - ./nginx/nginx_ldap.conf:/etc/nginx/nginx_ldap.conf:ro
       - ./nginx/htpasswd:/etc/nginx/.htpasswd:ro
       - ./nginx/certs:/etc/nginx/certs:ro
       - ./nginx/certs/dhparam.pem:/etc/nginx/dhparam/dhparam.pem:ro
 
+# shared named volume so filebeat can access nginx access logs
+volumes:
+  nginx-log-path:
