--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,14 +10,21 @@ http {
 
   include /etc/nginx/mime.types;
   sendfile on;
+
   client_max_body_size 20m;
-  fastcgi_buffers 16 16k;
-  fastcgi_buffer_size 32k;
-  fastcgi_read_timeout 600;
-  proxy_read_timeout 600;
-  proxy_buffer_size 128k;
-  proxy_buffers 4 256k;
-  proxy_busy_buffers_size 256k;
+
+  fastcgi_buffers 16 64k;
+  fastcgi_buffer_size 256k;
+  fastcgi_read_timeout 300s;
+  fastcgi_busy_buffers_size 384k;
+  fastcgi_request_buffering off;
+
+  proxy_connect_timeout 180s;
+  proxy_read_timeout 300s;
+  proxy_send_timeout 300s;
+  proxy_buffer_size 512k;
+  proxy_buffers 16 4m;
+  proxy_busy_buffers_size 16m;
 
   # if LDAP authentication is enabled, this will configure the ldap_server section
   include /etc/nginx/nginx_ldap_rt.conf;
@@ -89,9 +96,13 @@ http {
 
     # Malcolm file upload
     location /upload {
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
       proxy_pass http://docker-upload;
       proxy_redirect off;
       proxy_set_header Host upload.malcolm.local;
+      proxy_request_buffering off;
+      proxy_buffering off;
       client_max_body_size 20G;
     }
 
@@ -188,9 +199,13 @@ http {
     }
 
     location / {
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
       proxy_pass http://docker-upload;
       proxy_redirect off;
       proxy_set_header Host upload.malcolm.local;
+      proxy_request_buffering off;
+      proxy_buffering off;
       client_max_body_size 20G;
     }
   }
