create a zeek.service_version field to track protocol version in a single place; also, move password up to the zeek root level

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2395,18 +2395,19 @@ filter {
   # show up in many types of logs)
   mutate {
     id => "mutate_rename_zeek_common_fields"
-    rename => { "[zeek_%{[source]}][ts]"            => "[zeek][ts]" }
-    rename => { "[zeek_%{[source]}][uid]"           => "[zeek][uid]" }
-    rename => { "[zeek_%{[source]}][orig_h]"        => "[zeek][orig_h]" }
-    rename => { "[zeek_%{[source]}][orig_p]"        => "[zeek][orig_p]" }
-    rename => { "[zeek_%{[source]}][orig_l2_addr]"  => "[zeek][orig_l2_addr]" }
-    rename => { "[zeek_%{[source]}][resp_h]"        => "[zeek][resp_h]" }
-    rename => { "[zeek_%{[source]}][resp_p]"        => "[zeek][resp_p]" }
-    rename => { "[zeek_%{[source]}][resp_l2_addr]"  => "[zeek][resp_l2_addr]" }
-    rename => { "[zeek_%{[source]}][proto]"         => "[zeek][proto]" }
-    rename => { "[zeek_%{[source]}][service]"       => "[zeek][service]" }
-    rename => { "[zeek_%{[source]}][user]"          => "[zeek][user]" }
-    rename => { "[zeek_%{[source]}][community_id]"  => "[zeek][community_id]" }
+    rename => { "[zeek_%{[source]}][ts]"              => "[zeek][ts]" }
+    rename => { "[zeek_%{[source]}][uid]"             => "[zeek][uid]" }
+    rename => { "[zeek_%{[source]}][orig_h]"          => "[zeek][orig_h]" }
+    rename => { "[zeek_%{[source]}][orig_p]"          => "[zeek][orig_p]" }
+    rename => { "[zeek_%{[source]}][orig_l2_addr]"    => "[zeek][orig_l2_addr]" }
+    rename => { "[zeek_%{[source]}][resp_h]"          => "[zeek][resp_h]" }
+    rename => { "[zeek_%{[source]}][resp_p]"          => "[zeek][resp_p]" }
+    rename => { "[zeek_%{[source]}][resp_l2_addr]"    => "[zeek][resp_l2_addr]" }
+    rename => { "[zeek_%{[source]}][proto]"           => "[zeek][proto]" }
+    rename => { "[zeek_%{[source]}][service]"         => "[zeek][service]" }
+    rename => { "[zeek_%{[source]}][user]"            => "[zeek][user]" }
+    rename => { "[zeek_%{[source]}][password]"        => "[zeek][password]" }
+    rename => { "[zeek_%{[source]}][community_id]"    => "[zeek][community_id]" }
   }
 
   if ([zeek][orig_h]) { mutate { id => "mutate_add_field_zeek_srcIp"
@@ -2850,6 +2851,9 @@ filter {
         id => "mutate_add_field_zeek_quic_versionCnt"
         add_field =>  { "[quic][versionCnt]" => "1" }
       }
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_quic"
+               merge => { "[zeek][service_version]" => "[quic][version]" } }
     }
 
 
@@ -2943,6 +2947,9 @@ filter {
         id => "ruby_zeek_http_clientVersionCnt"
         code => "event.set('[http][clientVersionCnt]', event.get('[http][clientVersion]').length)"
       }
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_http"
+               merge => { "[zeek][service_version]" => "[zeek_http][version]" } }
     }
 
     if ([zeek_http][status_code]) {
@@ -3141,6 +3148,16 @@ filter {
       }
     }
 
+  } else if ([source] == "mqtt_connect") {
+    #############################################################################################################################
+    # mqtt_connect.log specific logic
+
+    if ([zeek_mqtt_connect][proto_version]) {
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_mqtt_connect"
+               merge => { "[zeek][service_version]" => "[zeek_mqtt_connect][proto_version]" } }
+    }
+
   } else if ([source] == "mqtt_publish") {
     #############################################################################################################################
     # mqtt_publish.log specific logic
@@ -3202,6 +3219,12 @@ filter {
           "4" => "broadcast/multicast"
         }
       }
+    }
+
+    if ([zeek_ntp][version]) {
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_ntp"
+               merge => { "[zeek][service_version]" => "[zeek_ntp][version]" } }
     }
 
     # convert timestamps from UNIX
@@ -3311,6 +3334,26 @@ filter {
                merge => { "[zeek][fuid]" => "[zeek_pe][fuid]" } }
     }
 
+  } else if ([source] == "profinet") {
+    #############################################################################################################################
+    # profinet.log specific logic
+
+    if ([zeek_profinet][block_version]) {
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_profinet"
+               merge => { "[zeek][service_version]" => "[zeek_profinet][block_version]" } }
+    }
+
+  } else if ([source] == "profinet_dce_rpc") {
+    #############################################################################################################################
+    # profinet.log specific logic
+
+    if ([zeek_profinet_dce_rpc][version]) {
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_profinet_dce_rpc"
+               merge => { "[zeek][service_version]" => "[zeek_profinet_dce_rpc][version]" } }
+    }
+
   } else if ([source] == "radius") {
     #############################################################################################################################
     # radius.log specific logic
@@ -3351,6 +3394,34 @@ filter {
 
     mutate { id => "mutate_split_zeek_rdp_client_channels"
              split => { "[zeek_rdp][client_channels]" => "," } }
+
+    if ([zeek_rdp][client_build]) {
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_rdp"
+               merge => { "[zeek][service_version]" => "[zeek_rdp][client_build]" } }
+    }
+
+  } else if ([source] == "rfb") {
+    #############################################################################################################################
+    # rfb.log specific logic
+
+    # collect protocol version under the parent zeek.service_version array
+    ruby {
+      id => "ruby_zeek_field_zeek_service_version_rfb"
+      code => '
+        versions = Array.new
+        clientMajorVersion = event.get("[zeek_rfb][client_major_version]").sub!(/^0*/, "")
+        clientMinorVersion = event.get("[zeek_rfb][client_minor_version]").sub!(/^0*/, "")
+        serverMajorVersion = event.get("[zeek_rfb][server_major_version]").sub!(/^0*/, "")
+        serverMinorVersion = event.get("[zeek_rfb][server_minor_version]").sub!(/^0*/, "")
+        if clientMajorVersion then
+          versions << [clientMajorVersion, clientMinorVersion].join(".")
+        end
+        if serverMajorVersion then
+          versions << [serverMajorVersion, serverMinorVersion].join(".")
+        end
+        event.set("[zeek][service_version]", versions.uniq)'
+    }
 
   } else if ([source] == "s7comm") {
     #############################################################################################################################
@@ -3450,8 +3521,24 @@ filter {
     #############################################################################################################################
     # sip.log specific logic
 
+    # collect all mime types under the parent [zeek][filetype] array
+    if ([zeek_sip][content_type]) { mutate { id => "mutate_merge_zeek_sip_content_type"
+                                             merge => { "[zeek][filetype]" => "[zeek_sip][content_type]" } } }
+
+
+    # collect protocol version under the parent zeek.service_version array
+    ruby {
+      id => "ruby_zeek_field_zeek_service_version_sip"
+      code => '
+      versions = Array.new
+      paths = [event.get("[zeek_sip][request_path]"), event.get("[zeek_sip][response_path]")].compact.join(",")
+      paths.scan(/\bSIP:?\/([\d\.]+)/i) { |match| versions << match[0] }
+      event.set("[zeek][service_version]", versions.uniq)'
+    }
+
     mutate { id => "mutate_split_zeek_sip_request_path"
              split => { "[zeek_sip][request_path]" => "," } }
+
     mutate { id => "mutate_split_zeek_sip_response_path"
              split => { "[zeek_sip][response_path]" => "," } }
 
@@ -3699,14 +3786,36 @@ filter {
                                       replace => { "[zeek_snmp][up_since]" => "%{[@metadata][snmp_time]}" } } }
     }
 
+    if ([zeek_snmp][version]) {
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_snmp"
+               merge => { "[zeek][service_version]" => "[zeek_snmp][version]" } }
+    }
+
+  } else if ([source] == "socks") {
+    #############################################################################################################################
+    # socks.log specific logic
+
+    if ([zeek_socks][version]) {
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_socks"
+               merge => { "[zeek][service_version]" => "[zeek_socks][version]" } }
+    }
+
   } else if ([source] == "ssh") {
     #############################################################################################################################
     # ssh.log specific logic
 
+    if ([zeek_ssh][version]) {
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_ssh"
+               merge => { "[zeek][service_version]" => "[zeek_ssh][version]" } }
+    }
+
     if ([zeek_ssh][server]) { mutate { id => "mutate_merge_zeek_ssh_server_version"
-                                      merge => { "[ssh][version]" => "[zeek_ssh][server]" } } }
+                                       merge => { "[ssh][version]" => "[zeek_ssh][server]" } } }
     if ([zeek_ssh][client]) { mutate { id => "mutate_merge_zeek_client_version"
-                                      merge => { "[ssh][version]" => "[zeek_ssh][client]" } } }
+                                       merge => { "[ssh][version]" => "[zeek_ssh][client]" } } }
     if (![ssh][version]) and ([zeek_ssh][version]) {
       mutate { id => "mutate_merge_zeek_ssh_version"
                merge => { "[ssh][version]" => "[zeek_ssh][version]" } }
@@ -3872,6 +3981,9 @@ filter {
         id => "ruby_zeek_ssl_versionCnt"
         code => "event.set('[tls][versionCnt]', event.get('[tls][version]').length)"
       }
+      # collect protocol version under the parent zeek.service_version array
+      mutate { id => "mutate_merge_field_zeek_service_version_ssl"
+               merge => { "[zeek][service_version]" => "[zeek_ssl][ssl_version]" } }
     }
 
     if ([zeek_ssl][cipher]) {
