added security overview dashboard wip

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2853,7 +2853,7 @@ filter {
       }
       # collect protocol version under the parent zeek.service_version array
       mutate { id => "mutate_merge_field_zeek_service_version_quic"
-               merge => { "[zeek][service_version]" => "[quic][version]" } }
+               merge => { "[zeek][service_version]" => "[zeek_gquic][version]" } }
     }
 
 
@@ -3399,6 +3399,8 @@ filter {
       # collect protocol version under the parent zeek.service_version array
       mutate { id => "mutate_merge_field_zeek_service_version_rdp"
                merge => { "[zeek][service_version]" => "[zeek_rdp][client_build]" } }
+      mutate { id => "mutate_gsub_field_zeek_service_version_rdp"
+               gsub => [ "[zeek][service_version]", "RDP ", "" ] }
     }
 
   } else if ([source] == "rfb") {
