--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -408,6 +408,17 @@ services:
       - ./htadmin/config.ini:/var/www/htadmin/config/config.ini:rw
       - ./htadmin/metadata:/var/www/htadmin/config/metadata:rw
       - ./nginx/htpasswd:/var/www/htadmin/config/htpasswd:rw
+  freq:
+    image: malcolmnetsec/freq:1.9.0
+    build:
+      context: .
+      dockerfile: Dockerfiles/freq.Dockerfile
+    restart: "no"
+    hostname: freq
+    environment:
+      VIRTUAL_HOST : 'freq.malcolm.local'
+    expose:
+      - 10004
   nginx-proxy:
     build:
       context: .
