--- a/freq-server/supervisord.conf
+++ b/freq-server/supervisord.conf
@@ -19,7 +19,7 @@ serverurl=unix:///var/run/supervisor.sock
 [program:freq]
 command=/usr/bin/python3 /opt/freq_server/freq_server.py -ip 0.0.0.0 %(ENV_FREQ_PORT)s /opt/freq_server/freq_table.freq
 user=%(ENV_FREQ_USER)s
-autostart=%(ENV_FREQ_ENABLED)s
+autostart=%(ENV_FREQ_LOOKUP)s
 startsecs=5
 startretries=2000000000
 stopasgroup=true
