--- a/logstash/pipelines/enrichment/12_type_conv.conf
+++ b/logstash/pipelines/enrichment/12_type_conv.conf
@@ -71,6 +71,8 @@ filter {
       "[userCnt]" => "integer"
       "[vlan]" => "integer"
       "[vlanCnt]" => "integer"
+      "[zeek][freq_score_v1]" => "float"
+      "[zeek][freq_score_v2]" => "float"
     }
   }
 
