added security overview dashboard wip

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -219,7 +219,7 @@ filter {
         }
       }
     }
-  }
+  } # end if dns.ip
 
   if ([dns][ip]) and ([dns][ip][0]) {
     # if this is a DNS record with an IP, GeoIP it as well
