use a ruby block rather than an http filter in order to better handle arrays

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -203,21 +203,48 @@ filter {
 
   if ([dns][host]) {
     # if requested, look up DNS queries using freq_server.py to get entropy scores
-    mutate {
-      add_field => { "[@metadata][ENV_FREQ_LOOKUP]" => "${FREQ_LOOKUP:false}" }
-    }
-    if ([@metadata][ENV_FREQ_LOOKUP] == "true") {
-      http {
-        id => "rest_dns_freq_lookup"
-        url => "http://freq:10004/measure/%{[dns][host]}"
-        target_body => "[@metadata][dns_host_freq]"
-      }
-      if ([@metadata][dns_host_freq]) {
-        grok {
-          id => "grok_dns_freq_parse"
-          match => { "[@metadata][dns_host_freq]" => [ "^\(%{NUMBER:[zeek][freq_score_v1]}, %{NUMBER:[zeek][freq_score_v2]}\)$" ] }
-        }
-      }
+
+    # I would do this in an http filter, but it doesn't handle arrays
+    # http {
+    #   id => "rest_dns_freq_lookup"
+    #   url => "http://freq:10004/measure/%{[dns][host]}"
+    #   target_body => "[@metadata][dns_host_freq]"
+    # }
+    # if ([@metadata][dns_host_freq]) {
+    #   grok {
+    #     id => "grok_dns_freq_parse"
+    #     match => { "[@metadata][dns_host_freq]" => [ "^\(%{NUMBER:[zeek][freq_score_v1]}, %{NUMBER:[zeek][freq_score_v2]}\)$" ] }
+    #   }
+    # }
+    ruby {
+        id => "ruby_dns_freq_lookup"
+        init => "
+          require 'net/http'
+          $freqLookupEnabled = ENV['FREQ_LOOKUP'] || 'false'
+          "
+        # freq_server.py returns a string like: (2.9333, 3.6353)
+        code => "
+            if ($freqLookupEnabled == 'true') then
+              scoresv1 = Array.new
+              scoresv2 = Array.new
+              scoresTmp = Array.new
+              begin
+                event.get('[dns][host]').each { |query|
+                  if (query.length >= 4) then
+                    scoresTmp.clear
+                    scoresTmp.concat(Net::HTTP.get_response(URI.parse('http://freq:10004/measure/' + query)).body.gsub(/(^\(|\)$|\s+)/, '').split(',').map(&:to_f))
+                    if (scoresTmp.length == 2) then
+                      scoresv1 << scoresTmp[0]
+                      scoresv2 << scoresTmp[1]
+                    end
+                  end
+                }
+              rescue Exception => e
+                event.set('ruby_exception', 'ruby_dns_freq_lookup: ' + e.message)
+              end
+              event.set('[zeek][freq_score_v1]', scoresv1) unless (scoresv1.length == 0)
+              event.set('[zeek][freq_score_v2]', scoresv2) unless (scoresv2.length == 0)
+            end"
     }
   } # end if dns.ip
 
